[gd_scene load_steps=15 format=3 uid="uid://dtesj06jpfvle"]

[ext_resource type="Texture2D" uid="uid://coli0ye4bsyff" path="res://resources/images/menus/background.png" id="1_1wum3"]
[ext_resource type="Theme" uid="uid://bnfirbbvjsv2r" path="res://resources/themes/tools_theme.tres" id="1_jrjn8"]
[ext_resource type="Script" path="res://scenes/tools/funkin/freeplay_list_editor.gd" id="2_eqltv"]
[ext_resource type="Texture2D" uid="uid://bk7jsl1s5ax2o" path="res://resources/images/game/assets/icons/face.png" id="3_kfdri"]
[ext_resource type="Texture2D" uid="uid://dfl1iso62n4rn" path="res://resources/images/icons/edit.svg" id="4_xdnbj"]
[ext_resource type="PackedScene" uid="uid://cl3vgtgslpeho" path="res://scenes/tools/funkin/icon_edit.tscn" id="6_xr1f8"]

[sub_resource type="LabelSettings" id="LabelSettings_uyslf"]
font_size = 48
outline_size = 10
outline_color = Color(0, 0, 0, 0.752)

[sub_resource type="LabelSettings" id="LabelSettings_7sp2r"]
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 0.705882)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gfm3x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tve2q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqsg6"]
bg_color = Color(0, 0, 0, 0.34902)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwbiv"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0, 0, 0, 0.317647)
border_width_top = 2
border_color = Color(1, 1, 1, 0.415686)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2h7ba"]
content_margin_left = 8.0
content_margin_top = 2.0
content_margin_right = 8.0
bg_color = Color(0, 0, 0, 0.317647)
border_color = Color(1, 1, 1, 0.415686)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nfrmn"]
content_margin_left = 8.0
content_margin_top = 2.0
content_margin_right = 8.0
bg_color = Color(0, 0, 0, 0.317647)
border_color = Color(1, 1, 1, 0.415686)

[node name="freeplay_list_editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jrjn8")
script = ExtResource("2_eqltv")

[node name="background" type="TextureRect" parent="."]
modulate = Color(0.671875, 0.404175, 0.567305, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1wum3")
stretch_mode = 5

[node name="panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
text = "Freeplay List Editor"
label_settings = SubResource("LabelSettings_uyslf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="list" type="Panel" parent="panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 72.0
offset_right = 628.0
offset_bottom = -8.0
grow_vertical = 2

[node name="scroll_container" type="ScrollContainer" parent="panel/list"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="v_box" type="VBoxContainer" parent="panel/list/scroll_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="template" type="Panel" parent="panel/list/scroll_container/v_box"]
unique_name_in_owner = true
self_modulate = Color(0.501961, 0.501961, 0.501961, 1)
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="icon" type="Sprite2D" parent="panel/list/scroll_container/v_box/template"]
position = Vector2(48, 48)
scale = Vector2(0.65, 0.65)
texture = ExtResource("3_kfdri")
hframes = 2

[node name="song_label" type="Label" parent="panel/list/scroll_container/v_box/template"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.5
offset_top = -24.0
offset_right = 49.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "Test"
label_settings = SubResource("LabelSettings_7sp2r")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="edit" type="Button" parent="panel/list/scroll_container/v_box/template"]
auto_translate_mode = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -32.0
offset_right = -176.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("4_xdnbj")
icon_alignment = 1

[node name="move_up" type="Button" parent="panel/list/scroll_container/v_box/template"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -32.0
offset_right = -96.0
grow_horizontal = 0
grow_vertical = 2
text = "^"

[node name="move_down" type="Button" parent="panel/list/scroll_container/v_box/template"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -160.0
offset_right = -96.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
text = "v"

[node name="delete" type="Button" parent="panel/list/scroll_container/v_box/template"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -32.0
offset_right = -16.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
text = "X"

[node name="tabs" type="Panel" parent="panel"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 636.0
offset_top = 72.0
offset_right = 1256.0
offset_bottom = -8.0
grow_vertical = 2

[node name="tab_container" type="TabContainer" parent="panel/tabs"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 6
theme_override_styles/tab_focus = SubResource("StyleBoxEmpty_gfm3x")
theme_override_styles/tabbar_background = SubResource("StyleBoxEmpty_tve2q")
theme_override_styles/panel = SubResource("StyleBoxFlat_dqsg6")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_cwbiv")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_2h7ba")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_nfrmn")
tab_alignment = 1
current_tab = 0

[node name="Add" type="Control" parent="panel/tabs/tab_container"]
layout_mode = 2
metadata/_tab_index = 0

[node name="song_name" type="LineEdit" parent="panel/tabs/tab_container/Add"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 610.0
offset_bottom = 72.0
placeholder_text = "Song Name"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5

[node name="icon_location" type="Marker2D" parent="panel/tabs/tab_container/Add"]
position = Vector2(72, 144)

[node name="icon" type="Sprite2D" parent="panel/tabs/tab_container/Add/icon_location"]
scale = Vector2(0.853, 0.853)
texture = ExtResource("3_kfdri")
hframes = 2

[node name="icon_edit" type="Button" parent="panel/tabs/tab_container/Add"]
layout_mode = 1
offset_left = 8.0
offset_top = 216.0
offset_right = 136.0
offset_bottom = 280.0
text = "Edit"

[node name="Edit" type="Control" parent="panel/tabs/tab_container"]
auto_translate_mode = 1
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="window" type="Window" parent="."]
title = "Icon Editor"
initial_position = 1
size = Vector2i(640, 480)
visible = false
transient = true
unresizable = true
min_size = Vector2i(640, 480)

[node name="icon_edit" parent="window" instance=ExtResource("6_xr1f8")]

[connection signal="pressed" from="panel/tabs/tab_container/Add/icon_edit" to="window" method="show"]
[connection signal="close_requested" from="window" to="window" method="hide"]
